modules/lib/dependencies/dav1d/cobalt_dav1d_shim.h

/**
 * Returns a plane data pointer of a decoded picture.
 *
 * Reads Dav1dPicture.data[plane] of the opaque picture handle. Plane 0 is luma
 * (Y), plane 1 is the first chroma plane (U/Cb), plane 2 is the second chroma
 * plane (V/Cr). For 8 bpc the bytes are samples; for 10 bpc they are little
 * words with the sample in the low 10 bits. The pointer addresses dav1d-owned
 * memory valid until cobalt_dav1d_picture_unref is called on the handle.
 *
 * @param pic   the picture handle from cobalt_dav1d_get_picture.
 * @param plane the plane index, 0, 1 or 2.
 * @return the plane base pointer, or NULL for a NULL handle or out-of-range
 *         plane index.
 */
uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane);
/**
 * Returns the row stride, in bytes, of a decoded picture plane.
 *
 * Reads Dav1dPicture.stride[0] for the luma plane (plane index 0) or
 * Dav1dPicture.stride[1] for either chroma plane (plane index 1 or 2), as dav1d
 * stores a single shared chroma stride. The dav1d stride is a ptrdiff_t; it is
 * widened to a fixed-width int64_t so the binding carries no host-dependent
 * type.
 *
 * @param pic   the picture handle from cobalt_dav1d_get_picture.
 * @param plane the plane index, 0 for luma or 1/2 for chroma.
 * @return the plane stride in bytes, or 0 for a NULL handle or out-of-range
 *         plane index.
 */
int64_t cobalt_dav1d_pic_stride(void *pic, int32_t plane);
/**
 * Returns the width, in pixels, of a decoded picture.
 *
 * Reads Dav1dPicture.p.w of the opaque picture handle.
 *
 * @param pic the picture handle from cobalt_dav1d_get_picture.
 * @return the picture width in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_dav1d_pic_width(void *pic);
/**
 * Returns the height, in pixels, of a decoded picture.
 *
 * Reads Dav1dPicture.p.h of the opaque picture handle.
 *
 * @param pic the picture handle from cobalt_dav1d_get_picture.
 * @return the picture height in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_dav1d_pic_height(void *pic);
/**
 * Returns the bit depth, in bits per component, of a decoded picture.
 *
 * Reads Dav1dPicture.p.bpc of the opaque picture handle; the value is 8 or 10.
 *
 * @param pic the picture handle from cobalt_dav1d_get_picture.
 * @return the bits-per-component value (8 or 10), or 0 for a NULL handle.
 */
int32_t cobalt_dav1d_pic_bitdepth(void *pic);
/**
 * Returns the chroma subsampling layout of a decoded picture.
 *
 * Reads Dav1dPicture.p.layout of the opaque picture handle and returns it as one
 * of the COBALT_DAV1D_LAYOUT_* selectors, which share dav1d's enumerator values.
 *
 * @param pic the picture handle from cobalt_dav1d_get_picture.
 * @return one of COBALT_DAV1D_LAYOUT_I400/I420/I422/I444, or -1 for a NULL
 *         handle.
 */
int32_t cobalt_dav1d_pic_layout(void *pic);
/**
 * Releases a decoded picture and frees its holder.
 *
 * Calls dav1d_picture_unref on the opaque handle, releasing dav1d's reference to
 * the underlying frame memory, then frees the heap-allocated Dav1dPicture holder
 * itself. Must be called at most once per handle. A NULL handle is ignored.
 *
 * @param pic the picture handle from cobalt_dav1d_get_picture, or NULL.
 */
void cobalt_dav1d_picture_unref(void *pic);
/**
 * Closes a decoder instance and frees all associated memory.
 *
 * Calls dav1d_close on the opaque decoder handle. Must be called at most once
 * per handle. A NULL handle is ignored and reported as success. Any pictures
 * obtained from this decoder must be released with cobalt_dav1d_picture_unref
 * before or after this call, independently.
 *
 * @param ctx the decoder handle from cobalt_dav1d_open, or NULL.
 * @return COBALT_DAV1D_OK on success.
 */
int32_t cobalt_dav1d_close(void *ctx);