modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/av1/bindings/CobaltDav1d.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_plane$descriptor() {
        return cobalt_dav1d_pic_plane.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_plane$handle() {
        return cobalt_dav1d_pic_plane.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_plane$address() {
        return cobalt_dav1d_pic_plane.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint8_t *cobalt_dav1d_pic_plane(void *pic, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_plane(MemorySegment pic, int plane) {
        var mh$ = cobalt_dav1d_pic_plane.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_plane", pic, plane);
            }
            return (MemorySegment)mh$.invokeExact(pic, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_stride {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_LONG,
            CobaltDav1d.C_POINTER,
            CobaltDav1d.C_INT
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_stride");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t cobalt_dav1d_pic_stride(void *pic, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_stride$descriptor() {
        return cobalt_dav1d_pic_stride.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t cobalt_dav1d_pic_stride(void *pic, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_stride$handle() {
        return cobalt_dav1d_pic_stride.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t cobalt_dav1d_pic_stride(void *pic, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_stride$address() {
        return cobalt_dav1d_pic_stride.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t cobalt_dav1d_pic_stride(void *pic, int32_t plane)
     * }
     */
    public static long cobalt_dav1d_pic_stride(MemorySegment pic, int plane) {
        var mh$ = cobalt_dav1d_pic_stride.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_stride", pic, plane);
            }
            return (long)mh$.invokeExact(pic, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_width");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_width(void *pic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_width$descriptor() {
        return cobalt_dav1d_pic_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_width(void *pic)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_width$handle() {
        return cobalt_dav1d_pic_width.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_width(void *pic)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_width$address() {
        return cobalt_dav1d_pic_width.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_width(void *pic)
     * }
     */
    public static int cobalt_dav1d_pic_width(MemorySegment pic) {
        var mh$ = cobalt_dav1d_pic_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_width", pic);
            }
            return (int)mh$.invokeExact(pic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_height");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_height(void *pic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_height$descriptor() {
        return cobalt_dav1d_pic_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_height(void *pic)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_height$handle() {
        return cobalt_dav1d_pic_height.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_height(void *pic)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_height$address() {
        return cobalt_dav1d_pic_height.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_height(void *pic)
     * }
     */
    public static int cobalt_dav1d_pic_height(MemorySegment pic) {
        var mh$ = cobalt_dav1d_pic_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_height", pic);
            }
            return (int)mh$.invokeExact(pic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_bitdepth {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_bitdepth");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_bitdepth(void *pic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_bitdepth$descriptor() {
        return cobalt_dav1d_pic_bitdepth.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_bitdepth(void *pic)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_bitdepth$handle() {
        return cobalt_dav1d_pic_bitdepth.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_bitdepth(void *pic)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_bitdepth$address() {
        return cobalt_dav1d_pic_bitdepth.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_bitdepth(void *pic)
     * }
     */
    public static int cobalt_dav1d_pic_bitdepth(MemorySegment pic) {
        var mh$ = cobalt_dav1d_pic_bitdepth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_bitdepth", pic);
            }
            return (int)mh$.invokeExact(pic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_pic_layout {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_pic_layout");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_layout(void *pic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_pic_layout$descriptor() {
        return cobalt_dav1d_pic_layout.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_layout(void *pic)
     * }
     */
    public static MethodHandle cobalt_dav1d_pic_layout$handle() {
        return cobalt_dav1d_pic_layout.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_layout(void *pic)
     * }
     */
    public static MemorySegment cobalt_dav1d_pic_layout$address() {
        return cobalt_dav1d_pic_layout.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_dav1d_pic_layout(void *pic)
     * }
     */
    public static int cobalt_dav1d_pic_layout(MemorySegment pic) {
        var mh$ = cobalt_dav1d_pic_layout.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_pic_layout", pic);
            }
            return (int)mh$.invokeExact(pic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_picture_unref {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_picture_unref");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void cobalt_dav1d_picture_unref(void *pic)
     * }
     */
    public static FunctionDescriptor cobalt_dav1d_picture_unref$descriptor() {
        return cobalt_dav1d_picture_unref.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void cobalt_dav1d_picture_unref(void *pic)
     * }
     */
    public static MethodHandle cobalt_dav1d_picture_unref$handle() {
        return cobalt_dav1d_picture_unref.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void cobalt_dav1d_picture_unref(void *pic)
     * }
     */
    public static MemorySegment cobalt_dav1d_picture_unref$address() {
        return cobalt_dav1d_picture_unref.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void cobalt_dav1d_picture_unref(void *pic)
     * }
     */
    public static void cobalt_dav1d_picture_unref(MemorySegment pic) {
        var mh$ = cobalt_dav1d_picture_unref.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_dav1d_picture_unref", pic);
            }
            mh$.invokeExact(pic);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_dav1d_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltDav1d.C_INT,
            CobaltDav1d.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltDav1d.findOrThrow("cobalt_dav1d_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
